ArgoCD/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    name: argocd
    environment: infra-management
---
apiVersion: v1
kind: Namespace
metadata:
  name: lab
  labels:
    name: lab
    environment: development
---
apiVersion: v1
kind: Namespace
metadata:
  name: staging
  labels:
    name: staging
    environment: staging
