ArgoCD/argo-server-ing.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  namespace: argocd
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - localhost  # or localhost if using self-signed cert
    secretName: argocd-tls  # your TLS secret
  rules:
  - host: localhost  # or localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 443
